--- a/style.css
+++ b/style.css
@@ -1,65 +1,14 @@
-input, textarea, select, button {
-    width : 150px;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "lato", sans-serif;
+}
 
-  fieldset {
-    position: relative;
-  }
-  
-  legend {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-  }
 
-  input, textarea {
-    font    : 1.4em/1.5em "handwriting", cursive, sans-serif;
-    border  : none;
-    padding : 0 10px;
-    margin  : 0;
-    width   : 80%;
-    background : none;
-  }
-
-  input:focus, textarea:focus {
-    background   : rgba(0,0,0,.1);
-    border-radius: 5px;
-  }
-
-  textarea {
-    display : block;
-  
-    padding : 10px;
-    margin  : 10px 0 0 -10px;
-    width   : 100%;
-    height  : 90%;
-  
-    border-right: 1px solid;
-  
-    /* resize  : none; */
-    overflow: auto;
-  }
-
-  button {
-    padding      : 5px;
-    font         : bold .6em sans-serif;
-    border       : 2px solid #333;
-    border-radius: 5px;
-    background   : none;
-    cursor       : pointer;
-    transform    : rotate(-1.5deg);
-  }
-  
-  button:after {
-    content      : " >>>";
-  }
-  
-  button:hover,
-  button:focus {
-    outline     : none;
-    background  : #000;
-    color       : #FFF;
-  }
+fieldset {
+  margin: 2em 0;
+  padding: 1em 2em;
+  border: solid 1px #ccc;
+  border-radius: 6px;
+  min-width: 200px;
+}
