--- a/style.css
+++ b/style.css
@@ -4,11 +4,76 @@
   font-family: "lato", sans-serif;
 }
 
-
 fieldset {
   margin: 2em 0;
   padding: 1em 2em;
   border: solid 1px #ccc;
   border-radius: 6px;
   min-width: 200px;
+}
+
+legend {
+  font-size: 1.25em;
+  padding: 0 0.25em;
+  color: #999;
+}
+
+/*labels*/
+label {
+  display: block;
+  margin-top: 1em;
+}
+
+.part2,
+.part3 label {
+  margin-top: 0;
+}
+
+/*inputs and textarea*/
+input {
+  padding: 0.5em;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #999;
+}
+
+input[type="text"] {
+  width: 15em;
+}
+
+textarea {
+  min-height: 8em;
+  min-width: 100%;
+  padding: 0.5em;
+  border: solid 1px #999;
+}
+
+/*Submit*/
+input[type="submit"] {
+  padding: 0.5em 1em;
+  border-radius: 6px;
+  background-color: #333;
+  color: #fff;
+  font-family: "Lato", sans-serif;
+  font-size: 0.8em;
+}
+
+/*Media Query*/
+@media screen and (min-width: 700px) {
+  form {
+    padding-left: 10em;
+  }
+  legend {
+    font-size: 1.75em;
+  }
+  fieldset {
+    width: 60%;
+    min-width: 320px;
+  }
+  .checks label {
+    display: inline-block;
+    padding-top: 0.5em;
+    margin-top: 0;
+    margin-right: 0.5em;
+  }
 }
